更新.gitignore以排除额外的构建输出和IDE配置文件;为项目文件修改和文档标准添加新规则。 删除过时的日志文件并将Gradle版本更新到8.13.2。 通过引入魔术数字常量和改进空检查，重构代码以获得更好的可读性和可维护性。